syntax = "proto3";

package shorturls.management.messages.v1;

import "buf/validate/validate.proto";

option go_package = "messages/v1";

message ListShortURLByOrganizationIDRequest {
  string organization_id = 1 [(buf.validate.field).required = true];

  int32 page_num = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).int32 = {gte: 1}
  ];
  int32 page_size = 3 [
    (buf.validate.field).required = true,
    (buf.validate.field).int32 = {
      gte: 10
      lte: 200
    }
  ];
}
